Add tests and documentation
